fix alignment of code in cli submission instruction 4

--- a/frontend_v2/src/app/components/challenge/challengesubmit/challengesubmit.component.scss
+++ b/frontend_v2/src/app/components/challenge/challengesubmit/challengesubmit.component.scss
@@ -128,3 +128,9 @@ th {
   list-style-type: decimal !important;
   }
 }
+
+.center-content{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
